lab1/Test/L1-A-7-20.cmm
int BgxpmrhhGscfLiw6IkP [ 1681166573 ] 
;
struct {
  int $Do8UOS ;
  struct MR2GUHXOpN oX , dna = b8bncyqTlPOcLI = _ihVCEQ1 
    && fmyMSolQ > aUvoanHexO + TucJ4xysFeN / - ! NaxHP9ra 
    [ GGRCegsKgF7qHaQ5scc = QrjYDipjAm || J5K6 - eCsOVr4 
    ( fIHKsm , HeWpnIILo = oUKah5Aobv5DYTyzXXYk || u5IvcF 
    >= ymmaAv1Z + kWsOGjTw8h1tx * FerTN [ KdOpBzt_ACmO 
    = d = YZhrkcpYGFpY = IwPSdE2X3TW9qYP || byJIf == CXH0444 
    + ! Bha5_0tD85IWGYwRWp8g [ rX3M5kJHDUe_FVT :|| ZVJOAR9R4JO 
    != djMJHM * ISwO1DLQ8 ( XqqZ44iz < Ams9ChKhZX / HinX0dDszNI 
    ( ixL9GbK62 , mKBKSgX66xJPLt , ayxL8ZrIzL58tOAZx0 
    , ! - ( SCclla8Euq = _PHd_2ngMIh = i = edPl <= ! v9Axmv 
    ) . Cm3525ggQAhnYw51dN ) ) ] ] - ! ! 492241273.798468899 
    <= v17R ( ) ) . WKf * 947633730 ] ;
  float huMvng71 ;
^}L ( ) {
}
int LzqhgdtALSpN_5SgKA ( int JkRerPVAUZm4Zl0n , int 
  E0V3pz3wpGpSXs5nF ) {
  if ( ysd9pbySSBP )   while ( bk4aJdqSf8kCR90Wo4RA 
    )   IT ;


}
struct x7r_SfN {
};
int i7YpFb8Q ( ) {
  if ( yY7YzUf1A ) {
    if ( gK8hi2_TS35haEZdMIa )     v43uBJbygVh9MRWy 
      ;
else     if ( xTGYAwVqQ )     uyL9St6Eo6ArmEX4L ;


  }else   return u2lP1u ;

}
int aIGE1AGHSfpUF9g , BdXgOPFQE1whC_azLsR 

;
